--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!--Div do Gerador-->
     <div class="color-generator">
         <h1>Gerador de Cores Aleatorias</h1>
         <div class="color-display" id="color-display">#FFFFFF</div>
