--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--Div do Gerador-->
     <div class="color-generator">
-        <h1>Gerador de Cores Aleatorias</h1>
+        <h1>Gerador de Cores</h1>
         <div class="color-display" id="color-display">#FFFFFF</div>
         <button id="generate-btn">Gerar</button>
     </div>
