--- a/index.html
+++ b/index.html
@@ -16,3 +16,21 @@
 </body>
 <script src="./script.js"></script>
 </html>
+
+<!--
+<div class="Paleta" id="paleta">
+    <div class="color-display" id="color-display">#FFFFFF</div>
+</div>
+<div class="Paleta" id="paleta2" >
+    <div class="color-display" id="color-display2">#FFFFFF</div>
+</div>
+<div class="Paleta" id="paleta3" >
+    <div class="color-display" id="color-display3">#FFFFFF</div>
+</div>
+<div class="Paleta" id="paleta4" >
+    <div class="color-display" id="color-display4">#FFFFFF</div>
+</div>
+<div class="Paleta" id="paleta5" >
+    <div class="color-display" id="color-display5">#FFFFFF</div>
+</div>
+-->
